yarn add --dev node-sass http-server concurrently

--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
     "build:scss": "yarn run node-sass --source-map true --source-map-embed --output-style expanded --output css --recursive scss",
     "dev": "yarn run concurrently \"yarn run dev:scss\" \"yarn run http-server --cors -o\"",
     "dev:scss": "yarn run node-sass --watch --source-map true --source-map-embed --output-style expanded --output css --recursive scss"
+  },
+  "devDependencies": {
+    "concurrently": "^4.1.0",
+    "http-server": "^0.11.1",
+    "node-sass": "^4.11.0"
   }
 }
