FIX concurrently option and scss watcher

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "build": "yarn build:scss",
     "build:scss": "yarn run node-sass --source-map true --source-map-embed --output-style expanded --output css --recursive scss",
-    "dev": "yarn run concurrently \"yarn run dev:scss\" \"yarn run http-server --cors -o\"",
-    "dev:scss": "yarn run node-sass --watch --source-map true --source-map-embed --output-style expanded --output css --recursive scss"
+    "dev": "yarn run concurrently --restart-after 3000 --restart-tries 600 \"yarn run dev:scss\" \"yarn run http-server --cors -o\"",
+    "dev:scss": "yarn run chokidar 'scss/**/*.scss' --command \"yarn build:scss\""
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
