--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev:scss": "yarn run chokidar 'scss/**/*.scss' --command \"yarn build:scss\""
   },
   "devDependencies": {
+    "chokidar-cli": "^1.2.1",
     "concurrently": "^4.1.0",
     "http-server": "^0.11.1",
     "node-sass": "^4.11.0"
