--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "license": "MIT",
   "scripts": {
     "build": "yarn build:scss",
+    "deploy": "now && now alias",
     "build:scss": "yarn run node-sass --source-map true --source-map-embed --output-style expanded --output css --recursive scss",
     "dev": "yarn run concurrently --restart-after 3000 --restart-tries 600 \"yarn run dev:scss\" \"yarn dev:server\"",
     "dev:server": "yarn run live-server --cors --no-css-inject --ignore=node_modules,scss",
-    "dev:scss": "yarn run chokidar 'scss/**/*.scss' --command \"yarn build:scss\""
+    "dev:scss": "yarn run chokidar 'scss/**/*.scss' --command \"yarn build:scss\"",
+    "dev:deploy": "yarn run chokidar 'css/**/*.css' '**/*.html' --ignore node_modules --ignore scss --command \"yarn deploy\""
   },
   "devDependencies": {
     "chokidar-cli": "^1.2.1",
